# hyprbop

./: README.md  pyproject.toml
config/: power.json  style.qss
scr/: get_config.py  main.py  pop_holder.py  pop_window.py  utils.py
src/: main.py
src/hyprbop/: main.py  pop_holder.py  pop_window.py  utils.py
src/hyprbop/config/: style.qss
