[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyprbop"
version = "0.1.0"
description = "A hacky utility for creating custom popups on hyprland"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "zetorik", email = "zetorikk@gmail.com" }
]
keywords = ["hyprland", "python", "popup", "waybar"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: Linux"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hyprbop = "main:main"

