[project]
name = "hyprbop"
version = "0.1.0"
description = "A hacky utility for creating custom popups on hyprland"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "zetorik", email = "zetorikk@gmail.com" }
]
keywords = ["hyprland", "python", "popup", "waybar"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: Linux"
]

dependencies = [
  "PySide6>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hyprbop" = ["config/*.json", "config/*.qss"]

[project.scripts]
hyprbop = "hyprbop.main:main"

